# RayTracer-C

./: .gitignore  CMakeLists.txt  Readme.md
src/: cannon_test.c  clock_test.c  cube_test.c  light_test.c  main.c  main.h  main.s  my_maths.h  normal_test.c  pattern_test.c  ray_test.c  reflect_test.c  refractive_test.c  render_world_test.c  shadow_test.c  shape_test.c  view_test.c  world_test.c
src/cannon/: cannon.c  cannon.h
src/canvas/: canvas.h  ppm_canvas.h
src/colors/: colors.h
src/geometry/: cube.c  cube.h  geometry.c  geometry.h  patterns.c  patterns.h  plane.c  plane.h  shape.h  sphere.c  sphere.h  transform.h  type_common.h
src/lights/: lights.h
src/materials/: materials.h
src/ray/: ray.c  ray.h
src/types/: common.h  types.h
src/world/: camera.h  world.h  world_helper.h
